<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:gravity="center_vertical">
    <com.issac.mystepcounter.view.CircleImageView
        android:id="@+id/item_avatar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:src="@mipmap/ic_statistics"
        app:border_color="@color/avatarBorder"
        app:border_width="1dp"/>
    <TextView
        android:id="@+id/item_name"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/item_name"/>
    <TextView
        android:id="@+id/item_info"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/item_info"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="right|center_vertical">
        <Button
            android:id="@+id/item_challenge"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/challenge"
            android:textSize="15sp"
            android:textColor="@color/percentageTextColor"
            android:layout_margin="15dp"
            android:padding="0dp"
            android:background="@drawable/item_button_back"/>
    </LinearLayout>
</LinearLayout>