<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.issac.mystepcounter.fragment.FragmentHomePage"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_home"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <com.issac.mystepcounter.view.PieView
        android:id="@+id/stepCounts"
        android:layout_below="@+id/tv_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        app:inner_pie_padding="30"
        app:percentage="60"
        app:percentage_size="50"
        app:inner_text="@string/inner_text"
        app:center_btn_text="@string/btn_start"
        android:layout_marginTop="30dp" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChartHome"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_below="@+id/stepCounts"/>

</RelativeLayout>
