<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_user"
    android:background="@color/global_back"
    tools:context="com.issac.mystepcounter.UserActivity"
    >
    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:id="@+id/user_info_title"
        android:background="@color/background"
        >
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_alignParentStart="true">
            <ImageView
                android:id="@+id/user_info_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|start"
                android:tint="@android:color/white"
                android:src="@mipmap/back"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:layout_marginStart="30dp"
                android:gravity="center_vertical"
                android:layout_gravity="center|start"
                />
            <ImageView
                android:id="@+id/user_info_edit"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="end|center_vertical"
                android:tint="@android:color/white"
                android:src="@mipmap/setting"/>
        </FrameLayout>

    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/user_info_background"
        android:layout_below="@+id/user_info_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:background="@android:color/white">
        <com.issac.mystepcounter.view.CircleImageView
            android:id="@+id/user_info_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_user"
            app:border_width="1px"
            app:border_color="@color/user_border"
            android:background="@drawable/avatar_back"
            />

        <TextView
            android:text="@string/user_info_username"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:typeface="monospace"
            android:textSize="@dimen/font_large"
            android:textColor="@color/font_content"
            android:id="@+id/user_info_username"
            android:gravity="center"
            android:layout_alignTop="@id/user_info_avatar"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@id/user_info_avatar" />

        <ImageView
            android:id="@+id/user_info_sex"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/user_info_avatar"
            android:layout_alignRight="@id/user_info_avatar"
            android:src="@mipmap/male"/>

        <TextView
            android:id="@+id/user_info_step"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/user_step"
            android:textSize="@dimen/font_large"
            android:textColor="@color/font_content"
            android:typeface="monospace"
            android:layout_below="@id/user_info_username"
            android:layout_toRightOf="@id/user_info_avatar"
            android:layout_alignBottom="@id/user_info_avatar"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            />

    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:background="@color/global_back"
        android:orientation="vertical"
        android:elevation="5dp"
        android:layout_below="@+id/user_info_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">
        <TextView
            android:typeface="monospace"
            android:textSize="@dimen/font_large"
            android:text="@string/user_height"
            android:textColor="@color/font_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/user_info_height"
            android:typeface="monospace"
            android:textSize="@dimen/font_large"
            android:text="170cm"
            android:textColor="@color/font_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
        <LinearLayout
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content">
            <TextView
                android:typeface="monospace"
                android:textSize="@dimen/font_large"
                android:text="@string/user_weight"
                android:textColor="@color/font_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/user_info_weight"
                android:typeface="monospace"
                android:textSize="@dimen/font_large"
                android:text="170cm"
                android:textColor="@color/font_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="2dp"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:typeface="monospace"
                android:textSize="@dimen/font_large"
                android:text="@string/user_email"
                android:textColor="@color/font_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/user_info_email"
                android:typeface="monospace"
                android:textSize="@dimen/font_large"
                android:text="170cm"
                android:textColor="@color/font_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:text="@string/signout"
            android:textSize="@dimen/font_large"
            android:textColor="@color/font_normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signout"
            android:elevation="5dp"
            android:layout_margin="10dp"
            android:background="@drawable/login_btn"/>
    </LinearLayout>
</RelativeLayout>
