<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.issac.mystepcounter.fragment.FragmentHomePage">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/user_relative1"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/userBack">
        <com.issac.mystepcounter.view.CircleImageView
            android:id="@+id/img_avatar_big"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@mipmap/ic_statistics"
            android:background="@drawable/avatar_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="你的用户名"
            android:textSize="30sp"
            android:foregroundGravity="center_horizontal"
            android:layout_below="@+id/img_avatar_big"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />
    </RelativeLayout>
    <LinearLayout
        android:layout_below="@+id/user_relative1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp">
        <LinearLayout
            android:id="@+id/click_weibo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_weibo"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weibo"
                android:textSize="20sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_in"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <include layout="@layout/merge_view"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_sms"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notice"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_in"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp" />
            </LinearLayout>
        </LinearLayout>
        <include layout="@layout/merge_view"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_recommend"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_in"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <include layout="@layout/merge_view"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_share_user"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share_user"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_in"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <include layout="@layout/merge_view"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_info"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_in"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <include layout="@layout/merge_view"/>
    </LinearLayout>

</RelativeLayout>
